--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
      <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
-    <title></title>
+    <title>BeachVibe</title>
   </head>
   <body>
   <!-- navbar -->
