--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
   <div class="container px-5 py-24 mx-auto">
     <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
       <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900">M A K I N G  .....  Y O U R ..... V A C C A T I O N  .....  ....  . .. C O N V I N I E N T</h1>
-      <button class="flex-shrink-0 text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg mt-10 sm:mt-0">Get Started</button>
-    </div>
+      <a href="form.html"><button class=" flex-nowrap text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg mt-10 sm:mt-0">Get Started</button>
+  </a>
+      </div>
   </div>
 </section>
 
