--- a/form.html
+++ b/form.html
@@ -31,7 +31,9 @@
     <label for="visit">Crowd</label>
     <select id="visit" name="visit">
       <option value="low">Low</option>
+      <option value="mid">Mid</option>
       <option value="high">High</option>
+
     </select>
 
     <input type="submit" value="Submit" onclick="results()">
