--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 </section>
 
 
-
+<div class="cd">
 <!-- footer -->
 <footer class="text-gray-600 body-font" id="contact">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
@@ -256,7 +256,7 @@
       <a href="" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@beachvibes</a>
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <a class="text-gray-500">
+<!--       <a class="text-gray-500">
         <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
           <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
         </svg>
@@ -277,11 +277,11 @@
           <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
           <circle cx="4" cy="4" r="2" stroke="none"></circle>
         </svg>
-      </a>
+      </a> -->
     </span>
   </div>
 </footer>
-
+</div>
 
 
 
