--- a/form.html
+++ b/form.html
@@ -36,10 +36,11 @@
 
     </select>
 
-    <input type="submit" value="Submit" onclick="results()">
+    <button onclick="results()">Submit</button>
+    <p id="p1"></p>
+    <p id="p2"></p>
   </form>
-  <h1 id="p1"> </h1>
-<h3><em id="p2"></em></h3>
+  
       </div>
       <div class="column right" >
       </div>
