--- a/new.html
+++ b/new.html
@@ -15,10 +15,12 @@
     <p id="p2"></p>
 
   </body>
-  <script type="text/javascript">
-    window.onbeforeunload = function() {
-        return "Dude, are you sure you want to leave? Think of the kittens!";
-    }
+<script>
+{
+   function results(){
+      event.preventDefault();
+   }
+}
 </script>
 
 </html>
