--- a/new.html
+++ b/new.html
@@ -13,6 +13,12 @@
   
     <p id="p1"></p>
     <p id="p2"></p>
+    
+    <body onload="results()">
+
+  <h1>"The value for number is: " <span id="p2"></span></h1>
+
+</body>
 
   </body>
 
