--- a/new.html
+++ b/new.html
@@ -9,17 +9,17 @@
 
     <title></title>
   </head>
-  <body>
+<!--   <body>
   
     <p id="p1"></p>
     <p id="p2"></p>
-    
+     -->
     <body onload="results()">
 
   <h1>"The value for number is: " <span id="p2"></span></h1>
 
 </body>
 
-  </body>
+<!--   </body> -->
 
 </html>
