--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
 
     </select>
 
-    <button onload="results()">Submit</button>
+    <button onclick="results()">Submit</button>
     
   </form>
   <p id="p1"></p>
